# quant

./: .env.example  .gitignore  CLAUDE.md  README.md  README_zh.md  deploy.sh  docker-compose.yml  setup.sh  start.sh
backend/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_init.py
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/application/: __init__.py  services.py
backend/app/application/trading/: __init__.py
backend/app/core/: config.py  database.py  logging.py  security.py  tracing.py
backend/app/domain/: __init__.py  events.py  exceptions.py
backend/app/domain/account/: __init__.py
backend/app/domain/marketdata/: __init__.py
backend/app/domain/strategy/: __init__.py
backend/app/domain/trading/: __init__.py
backend/app/domain/value_objects/: __init__.py  base.py
backend/app/engine/: __init__.py  engine.py  market_data.py  strategies.py
backend/app/executors/: __init__.py  base.py  factory.py  qmt_executor.py  simulated_executor.py
backend/app/infrastructure/: __init__.py
backend/app/models/: __init__.py  backtest.py  base.py  order.py  position.py  strategy.py  user.py
backend/app/presentation/: __init__.py
backend/app/schemas/: __init__.py  market.py  order.py  strategy.py  user.py
backend/app/services/: __init__.py  auth_service.py  market_service.py  order_service.py  strategy_service.py
backend/app/services/adapters/: __init__.py  (+2 more)
backend/tests/domain/: test_order.py  test_position.py
backend/tests/integration/: test_order_flow.py
(+68 files in other folders)
